[workspace]
members = ["aoc_core", "aoc", "2022", "2023", "2024"]
default-members = ["aoc_core"]
resolver = "2"

[workspace.dependencies]
aoc_core = { path = "aoc_core" }
aoc = { path = "aoc" }
anyhow = "1.0.93"

[profile.dev]
lto = "off"
opt-level = 0

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
strip = true

[profile.dev.package.aoc]
codegen-units = 1
opt-level = 3
strip = true

[profile.dev.package.aoc_core]
codegen-units = 1
opt-level = 3
strip = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
